--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -40,7 +40,7 @@
   > *:not(.alert, .main-header) {
     border: $border-style;
     border-top: unset;
-    padding: $main-margin;
+    // padding: $main-margin;
 
     > *:last-child {
       border-bottom: none;
