--- a/scss/components/_main-content.scss
+++ b/scss/components/_main-content.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     input {
+      max-width: 50vw;
       border: none;
       border-radius: 5px;
       height: 60%;
@@ -52,7 +53,7 @@
       align-items: center;
     }
     .canvas-container {
-      padding: 0 1em 2em 1em;
+      // padding: 0 1em 2em 1em;
     }
   }
   &-full {
@@ -134,11 +135,14 @@
 
 .members,
 .activity {
+  @extend %fix-font-size;
   &-container {
     border-bottom: $border-style;
     flex: 1;
-    margin: 10px;
-    padding: 10px;
+    @include mq("s") {
+      margin: 10px;
+      padding: 10px;
+    }
     @include flexy(column) {
       align-items: center;
       @include mq("s") {
