--- a/scss/utilities/_helpers.scss
+++ b/scss/utilities/_helpers.scss
@@ -1,8 +1,14 @@
 .hidden {
-    position:absolute;
-    left:-10000px;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+%fix-font-size {
+  font-size: 0.9em;
+  @include mq("s") {
+    font-size: unset;
   }
+}
